feat: Add/Edit navigation parts

--- a/style/style.css
+++ b/style/style.css
@@ -1,118 +1,111 @@
-/* Style goes here */
+/* All elements & The body*/
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
-  font-family: 'Roboto', sans-serif;
-  color: #666666;
-  line-height: 1.5em;
-  position: relative;
-}
-.navOpen {
-  overflow: hidden;
-}
-.wrapper {
-  transition-duration: 0.5s;
-  transition-timing-function: swing;
-  background-color: white;
-  width: 100%;
   height: 100%;
-  position: relative;
-  padding: 100px 40px;
-}
-.wrapper.open {
-  transform: translateX(250px) translateY(50px);
-  -webkit-transform: translateX(250px) translateY(50px);
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
-}
-.wrapper section {
-  max-width:  730px;
-  margin: 0 auto;
-}
-.wrapper section h1 {
-  font-weight: 300;
-  font-size: 30px;
-  margin-bottom: 10px;
-}
-.wrapper section h2 {
-  font-weight: 300;
-  font-size: 20px;
-  margin-bottom: 40px;
-}
-.wrapper section p {
-  margin-bottom: 40px;
-}
-.openNav {
-  transition-duration: 0.5s;
-  transition-timing-function: swing;
-  width: 50px;
-  height: 50px;
-  background-color: #14B9FF;
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 9;
-}
-.openNav:hover {
-  cursor: pointer;
-}
-.openNav .icon {
-  transition-duration: 0.2s;
-  position: absolute;
-  width: 30px;
-  height: 2px;
-  background-color: white;
-  top: 24px;
-  left: 10px;
-}
-.openNav .icon:before,
-.openNav .icon:after {
-  transition-duration: 0.5s;
-  background-color: white;
-  position: absolute;
-  content: "";
-  width: 30px;
-  height: 2px;
-  left: 0px;
-}
-.openNav .icon:before {
-  top: -7px;
-}
-.openNav .icon:after {
-  top: 7px;
-}
-.openNav.open {
-  transform: translateX(250px) translateY(50px);
-  -webkit-transform: translateX(250px) translateY(50px);
-}
-.openNav.open .icon {
-  background-color: transparent;
-}
-.openNav.open .icon:before,
-.openNav.open .icon:after {
-  top: 0;
-}
-.openNav.open .icon:before {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-}
-.openNav.open .icon:after {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-nav {
-  background-color: #14B9FF;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   position: fixed;
   left: 0;
   top: 0;
 }
+
+/* Navigation */
+
+/* Navigator */
+.navigator {
+  transition-duration: 0.5s;
+  transition-timing-function: swing;
+  width: 50px;
+  height: 50px;
+  background-color: #C70039;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 9;
+}
+.navigator:hover {
+  cursor: pointer;
+}
+.navigator .nav-icon {
+  transition-duration: 0.2s;
+  position: absolute;
+  width: 30px;
+  height: 5px;
+  background-color: white;
+  top: 24px;
+  left: 10px;
+}
+.navigator .nav-icon:before,
+.navigator .nav-icon:after {
+  transition-duration: 0.5s;
+  background-color: white;
+  position: absolute;
+  content: "";
+  width: 30px;
+  height: 5px;
+  left: 0px;
+}
+.navigator .nav-icon:before {
+  top: -10px;
+}
+.navigator .nav-icon:after {
+  top: 10px;
+}
+.navigator.open {
+  transform: translateX(250px) translateY(50px);
+  -webkit-transform: translateX(250px) translateY(50px);
+}
+.navigator.open .nav-icon {
+  background-color: transparent;
+}
+.navigator.open .nav-icon:before,
+.navigator.open .nav-icon:after {
+  top: 0;
+}
+.navigator.open .nav-icon:before {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+.navigator.open .nav-icon:after {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+/* Nav Menu */
+nav {
+  background-color: #C70039;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+nav img {
+  width: 400px;
+  height: 50px;
+
+}
+nav .search {
+  background-color: blue;
+  width: 400px;
+  height: 50px;
+  vertical-align: top;
+  float: right;
+  margin-right: 100px;
+}
+nav select {
+  width: 250px;
+  display: block;
+}
 nav ul {
   width: 250px;
-  margin-top: 50px;
 }
 nav ul:hover li {
   color: rgba(255, 255, 255, 0.5);
@@ -128,4 +121,23 @@ nav ul li {
 nav ul li:hover {
   cursor: pointer;
   color: white;
+}
+
+/* Content + Map */
+.content {
+  transition-duration: 0.5s;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.content.open {
+  transform: translateX(250px) translateY(50px);
+  -webkit-transform: translateX(250px) translateY(50px);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+}
+.content #map {
+  height: 100%;
+  margin: 0 auto;
 }
